2002-11-07  Larry Ewing  <lewing@ximian.com>

	* htmlselect.c (html_select_set_text): clear the requisition size
	whenever we add a string.

	* htmltextinput.c: fix the requested width calculation.

2002-11-06  Radek Doulik  <rodo@ximian.com>

	* htmlgdkpainter.c: use lower level pango iface

	* libgtkhtml.pc.in (gtkhtml_datadir): added gtkhtml_datadir
	(NotZed)

2002-11-05  Larry Ewing  <lewing@ximian.com>

	* gtkhtml.c (selection_received): pad citations with a <br> to
	avoid agressive merging.

	* htmlobject.c: remove html_object_calc_intersection and replace
	with html_object_intersect that uses GdkRectangle.

	* htmlobject.h: fix prototypes.
	
	* htmlimage.c: replace ArtIRect with GdkRectangle.

	* htmltable.c: replace ArtIRect with GdkRectangle.

	* htmltablecell.c: replace ArtIRect with GdkRectangle.

	* htmltextslave.c: replace ArtIRect with GdkRectangle.

	* htmlframe.c: replace ArtIRect with GdkRectangle.

	* htmlframeset.c: replace ArtIRect with GdkRectangle.

	* htmliframe.c: replace ArtIRect with GdkRectangle.

	* htmlplainpainter.c: replace ArtIRect with GdkRectangle.

2002-11-05  Larry Ewing  <lewing@ximian.com>

	* htmlimage.c (draw): protect the draw function from images that
	are not loaded.

	* htmlclueflow.c (draw_quotes): fix printing.

	* htmlgdkpainter.c (draw_background): use GdkRectangles instead of
	ArtIRects, support full alpha on table and body bg images.
	(draw_pixmap): use GdkRectangles.

	* htmlclueflow.c (draw_quotes): use GdkRectangles.

2002-11-05  Radek Doulik  <rodo@ximian.com>

	* htmlframe.c (frame_submit): use g_signal_emit_by_name
	(frame_object_requested): ditto
	(calc_size): use set_size_request
	(html_frame_set_size): ditto
	(html_frame_init): ditto

	* htmliframe.c (iframe_object_requested): use
	g_signal_emit_by_name
	(calc_size): use set_size_request
	(html_iframe_init): ditto

	* htmltextinput.c (html_text_input_key_pressed): use
	g_signal_stop_emission_by_name
	(html_text_input_init): use set_size_request
